Cambios menores en la seccion de fotografia para optimizar rendimiento

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -209,6 +209,7 @@
       >
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/0.webp"
           alt="Bosque Nublado"
           data-index="1"
@@ -216,6 +217,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/1.webp"
           alt="Foto Panoramica de una parque en Londres"
           data-index="2"
@@ -223,6 +225,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/2.webp"
           alt="Foto de una montaña en el parque Chicaque"
           data-index="3"
@@ -230,6 +233,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/3.webp"
           alt="Foto panoramica de las Piedras del Chivo Negro"
           data-index="4"
@@ -237,6 +241,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/3_1.webp"
           alt="Solfie con efecto fisheye 360°"
           data-index="5"
@@ -244,6 +249,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/4.webp"
           alt="Foto del London Eye"
           data-index="6"
@@ -251,6 +257,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/5.webp"
           alt="Foto de una iglesia Europea"
           data-index="7"
@@ -258,6 +265,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/6.webp"
           alt="Foto interior de una iglesia"
           data-index="8"
@@ -265,6 +273,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/7.webp"
           alt="Foto interior de una iglesia"
           data-index="9"
@@ -272,6 +281,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/8.webp"
           alt="Foto interior de una iglesia"
           data-index="10"
@@ -279,6 +289,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/9.webp"
           alt="Anillo de oro"
           data-index="11"
@@ -286,6 +297,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/10.webp"
           alt="Retrato maquillaje"
           data-index="12"
@@ -293,6 +305,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/11.webp"
           alt="Foto Boxeador"
           data-index="13"
@@ -300,6 +313,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/12.webp"
           alt="Retrato close-up"
           data-index="14"
@@ -307,6 +321,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/12_1.webp"
           alt="Retrato de una mujer"
           data-index="15"
@@ -314,6 +329,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/13.webp"
           alt="Residencias Londres"
           data-index="16"
@@ -321,6 +337,7 @@
         />
         <img
           class="image"
+          loading="lazy"
           src="../img/Fotografia/14.webp"
           alt="Parqueadero Londres"
           data-index="17"
