--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -209,24 +209,28 @@
           src="../img/Ilustración/1.webp"
           alt="Collage diente de leon"
           class="img-el"
+          loading="lazy"
           data-index="1"
         />
         <img
           src="../img/Ilustración/4.webp"
           alt="Arbol Con Pasillo"
           class="img-el"
+          loading="lazy"
           data-index="4"
         />
         <img
           src="../img/Ilustración/8.webp"
           alt="Collage de conejo"
           class="img-el"
+          loading="lazy"
           data-index="7"
         />
         <img
           src="../img/Ilustración/11.webp"
           alt="Cables"
           class="img-el"
+          loading="lazy"
           data-index="13"
         />
       </div>
@@ -235,24 +239,28 @@
           src="../img/Ilustración/2.webp"
           alt="Pingüino"
           class="img-el"
+          loading="lazy"
           data-index="2"
         />
         <img
           src="../img/Ilustración/5.webp"
           alt="Zorro"
           class="img-el"
+          loading="lazy"
           data-index="5"
         />
         <img
           src="../img/Ilustración/9.webp"
           alt="Iglesia Italiana"
           class="img-el"
+          loading="lazy"
           data-index="8"
         />
         <img
           src="../img/Ilustración/12.webp"
           alt="Mapache"
           class="img-el"
+          loading="lazy"
           data-index="11"
         />
       </div>
@@ -261,36 +269,42 @@
           src="../img/Ilustración/3.webp"
           alt="Tacones"
           class="img-el"
+          loading="lazy"
           data-index="3"
         />
         <img
           src="../img/Ilustración/6.webp"
           alt="Cabaña"
           class="img-el"
+          loading="lazy"
           data-index="6"
         />
         <img
           src="../img/Ilustración/7.webp"
           alt="Poses de Pajaros"
           class="img-el"
+          loading="lazy"
           data-index="9"
         />
         <img
           src="../img/Ilustración/10.webp"
           alt="Retrato de familia"
           class="img-el"
+          loading="lazy"
           data-index="10"
         />
         <img
           src="../img/Ilustración/13.webp"
           alt="TBD"
           class="img-el"
+          loading="lazy"
           data-index="14"
         />
         <img
           src="../img/Ilustración/14.webp"
           alt="Retrato"
           class="img-el"
+          loading="lazy"
           data-index="12"
         />
       </div>
