Cambio menor de el titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./src/css/style-general.css" />
     <link rel="stylesheet" href="./src/css/queries/queries-general.css" />
     <link rel="stylesheet" href="./src/css/queries/queries-index.css" />
-    <title>Jessica Peña</title>
+    <title>Viviana Peña</title>
     <script type="module" src="./src/javascript/script.js"></script>
     <script type="module" src="./src/javascript/script-mobile-nav.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
