--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -14,7 +14,7 @@
       src="../javascript/script-mobile-nav.js"
     ></script>
     <link rel="icon" href="../img/favicon.ico" />
-    <title>Jessica Peña</title>
+    <title>Viviana Peña</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
