--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style-ilustracion.css" />
     <link rel="stylesheet" href="../css/queries/queries-general.css" />
     <link rel="stylesheet" href="../css/queries/queries-ilustracion.css" />
-    <title>Jessica Peña</title>
+    <title>Viviana Peña</title>
     <script
       defer
       type="module"
