--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="nav-container">
-      <div class="left-nav">
+      <div class="left-nav" onclick="window.location='./index.html';">
         <img
           src="./src/img/muñequito_pantalla_principal.svg"
           alt="logo"
