--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="nav-container">
-      <div class="left-nav">
+      <div class="left-nav" onclick="window.location='./index.html';">
         <img
           src="../img/muñequito_pantalla_principal.svg"
           alt="logo"
