Se corrige bug de la sección de fotografia causado por eliminar imagenes y no cambiar los indices de las restantes; Se modifica la sección de ilustración eliminando imagenes solicitadas por la cliente y agregando nuevas imagenes suministradas, queda pendient los textos descriptivos de las nuevas imagenes.

--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -213,22 +213,29 @@
           data-index="1"
         />
         <img
-          src="../img/Ilustración/4.webp"
-          alt="Arbol Con Pasillo"
+          src="../img/Ilustración/11.webp"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="4"
         />
         <img
-          src="../img/Ilustración/8.webp"
-          alt="Collage de conejo"
+          src="../img/Ilustración/7.webp"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="7"
         />
         <img
-          src="../img/Ilustración/11.webp"
-          alt="Cables"
+          src="../img/Ilustración/10.webp"
+          alt="Collage diente de leon"
+          class="img-el"
+          loading="lazy"
+          data-index="10"
+        />
+        <img
+          src="../img/Ilustración/13.webp"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="13"
@@ -237,79 +244,78 @@
       <div class="flex-col col2">
         <img
           src="../img/Ilustración/2.webp"
-          alt="Pingüino"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="2"
         />
         <img
           src="../img/Ilustración/5.webp"
-          alt="Zorro"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="5"
         />
         <img
-          src="../img/Ilustración/9.webp"
-          alt="Iglesia Italiana"
+          src="../img/Ilustración/8.webp"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="8"
         />
         <img
-          src="../img/Ilustración/12.webp"
-          alt="Mapache"
+          src="../img/Ilustración/4.webp"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="11"
+        />
+        <img
+          src="../img/Ilustración/14.webp"
+          alt="Collage diente de leon"
+          class="img-el"
+          loading="lazy"
+          data-index="14"
         />
       </div>
       <div class="flex-col col3">
         <img
           src="../img/Ilustración/3.webp"
-          alt="Tacones"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="3"
         />
         <img
           src="../img/Ilustración/6.webp"
-          alt="Cabaña"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="6"
         />
         <img
-          src="../img/Ilustración/7.webp"
-          alt="Poses de Pajaros"
+          src="../img/Ilustración/9.webp"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="9"
         />
         <img
-          src="../img/Ilustración/10.webp"
-          alt="Retrato de familia"
-          class="img-el"
-          loading="lazy"
-          data-index="10"
-        />
-        <img
-          src="../img/Ilustración/13.webp"
-          alt="TBD"
-          class="img-el"
-          loading="lazy"
-          data-index="14"
-        />
-        <img
-          src="../img/Ilustración/14.webp"
-          alt="Retrato"
+          src="../img/Ilustración/12.webp"
+          alt="Collage diente de leon"
           class="img-el"
           loading="lazy"
           data-index="12"
         />
+        <img
+          src="../img/Ilustración/15.webp"
+          alt="Collage diente de leon"
+          class="img-el"
+          loading="lazy"
+          data-index="15"
+        />
       </div>
     </section>
-
     <div class="overlay-gallery hidden">
       <div class="img-container">
         <img alt="" id="gallery-img" />
