Se corrigen los enlaces de las secciones de contenido que regresan a la seccion de inicio

--- a/src/html/seccion-fotografia.html
+++ b/src/html/seccion-fotografia.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <nav class="nav-container">
-      <div class="left-nav" onclick="window.location='./index.html';">
+      <div class="left-nav" onclick="window.location='../../index.html';">
         <img
           src="../img/muñequito_pantalla_principal.svg"
           alt="logo"
