--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -194,17 +194,33 @@
     <main>
       <div class="container">
         <div class="projects-grid">
-          <div class="project-card" data-content="calendarios">
-            <div class="project-img img1"></div>
-            <div class="poject-title"><h2>Calendarios</h2></div>
-          </div>
           <div class="project-card" data-content="carteles">
-            <div class="project-img img2"></div>
+            <div class="project-img img1"></div>
             <div class="poject-title"><h2>Carteles</h2></div>
           </div>
           <div class="project-card" data-content="logo">
-            <div class="project-img img3"></div>
+            <div class="project-img img2"></div>
             <div class="poject-title"><h2>Logotipo</h2></div>
+          </div>
+          <div class="project-card" data-content="corral">
+            <div class="project-img img3"></div>
+            <div class="poject-title"><h2>Campaña el Corral</h2></div>
+          </div>
+          <div class="project-card" data-content="frisby">
+            <div class="project-img img4"></div>
+            <div class="poject-title"><h2>Campaña Frisby</h2></div>
+          </div>
+          <div class="project-card" data-content="cordilleras">
+            <div class="project-img img5"></div>
+            <div class="poject-title"><h2>Campaña Tres Cordilleras</h2></div>
+          </div>
+          <div class="project-card" data-content="universidades">
+            <div class="project-img img6"></div>
+            <div class="poject-title"><h2>Campañas Universidad Central</h2></div>
+          </div>
+          <div class="project-card" data-content="xp">
+            <div class="project-img img7"></div>
+            <div class="poject-title"><h2>Campaña XP</h2></div>
           </div>
         </div>
       </div>
