Se elimina el parrafo descriptivo de las imagenes de la sección de Ilustración y se reemplaza por un titulo, a petición del cliente; se corrije el script, el documento y los estilos de acuerdo a este cambio; se arregla un bug que hacia que la navegación y paginación no funcionara correctamente con los iconos de paginacion.

--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -317,11 +317,9 @@
       </div>
     </section>
     <div class="overlay-gallery hidden">
+      <h2 class="img-tittle">Titulo</h2>
       <div class="img-container">
         <img alt="" id="gallery-img" />
-        <div class="img-desc">
-          <p class="img-text"></p>
-        </div>
       </div>
       <div class="pagination"></div>
       <svg
