Se corrigen los titulos de las imagenes de la sección de ilustración; se corrigen los estilos de la sección de diseño para mejorar el aspecto del contenedor y se modifica script de script-diseno.js para posicionar el overlay en el ScrollY del documento para que no se quede al inicio y para ocultar la barra de scroll del HTML al momento de mostrar la galeria.

--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -216,7 +216,7 @@
           </div>
           <div class="project-card" data-content="universidades">
             <div class="project-img img6"></div>
-            <div class="poject-title"><h2>Campañas Universidad Central</h2></div>
+            <div class="poject-title"><h2>Campañas Universidades</h2></div>
           </div>
           <div class="project-card" data-content="xp">
             <div class="project-img img7"></div>
