--- a/src/html/seccion-diseno.html
+++ b/src/html/seccion-diseno.html
@@ -198,10 +198,10 @@
             <div class="project-img img1"></div>
             <div class="poject-title"><h2>Carteles</h2></div>
           </div>
-          <div class="project-card" data-content="logo">
+          <!-- <div class="project-card" data-content="logo">
             <div class="project-img img2"></div>
             <div class="poject-title"><h2>Logotipo</h2></div>
-          </div>
+          </div> -->
           <div class="project-card" data-content="corral">
             <div class="project-img img3"></div>
             <div class="poject-title"><h2>Campaña el Corral</h2></div>
