Se agregan los textos descriptivos a las imagenes de la sección de ilustración.

--- a/src/html/seccion-ilustracion.html
+++ b/src/html/seccion-ilustracion.html
@@ -207,35 +207,35 @@
       <div class="flex-col col1">
         <img
           src="../img/Ilustración/1.webp"
-          alt="Collage diente de leon"
+          alt="Collage diente de leon tomando café"
           class="img-el"
           loading="lazy"
           data-index="1"
         />
         <img
           src="../img/Ilustración/11.webp"
-          alt="Collage diente de leon"
+          alt="Hoja de personaje de una niña con vista en globo, 360° y varias poses"
           class="img-el"
           loading="lazy"
           data-index="4"
         />
         <img
           src="../img/Ilustración/8.webp"
-          alt="Collage diente de leon"
+          alt="Pintura en acrilico de Xurirux con técnica de veladuras"
           class="img-el"
           loading="lazy"
           data-index="7"
         />
         <img
           src="../img/Ilustración/4.webp"
-          alt="Collage diente de leon"
+          alt="Hoja de personaje de una caricatura de un pollo brazilero en varias poses"
           class="img-el"
           loading="lazy"
           data-index="10"
         />
         <img
           src="../img/Ilustración/14.webp"
-          alt="Collage diente de leon"
+          alt="Caricatura de un leon con shampoo en la cabeza mirando su rostro en el espejo de un baño"
           class="img-el"
           loading="lazy"
           data-index="13"
@@ -244,35 +244,35 @@
       <div class="flex-col col2">
         <img
           src="../img/Ilustración/2.webp"
-          alt="Collage diente de leon"
+          alt="Ilustración de un pingüino hecha en acuarela"
           class="img-el"
           loading="lazy"
           data-index="2"
         />
         <img
           src="../img/Ilustración/5.webp"
-          alt="Collage diente de leon"
+          alt="Hoja de presonaje de la caricatura de un pollo brazilero en 360° con expresiones faciales y poses"
           class="img-el"
           loading="lazy"
           data-index="5"
         />
         <img
           src="../img/Ilustración/9.webp"
-          alt="Collage diente de leon"
+          alt="Pintura en acrilico de Xurirux con técnica de veladuras"
           class="img-el"
           loading="lazy"
           data-index="8"
         />
         <img
           src="../img/Ilustración/13.webp"
-          alt="Collage diente de leon"
+          alt="Caricatura de un león en un baño, que tiene una botella de shampoo en sus manos"
           class="img-el"
           loading="lazy"
           data-index="11"
         />
         <img
           src="../img/Ilustración/15.webp"
-          alt="Collage diente de leon"
+          alt="Muckup de el cuento ilustrado de un león de caricatura"
           class="img-el"
           loading="lazy"
           data-index="14"
@@ -281,28 +281,28 @@
       <div class="flex-col col3">
         <img
           src="../img/Ilustración/6.webp"
-          alt="Collage diente de leon"
+          alt="Caricatura de un mapache con la lengua afuera hecha en acrilicos"
           class="img-el"
           loading="lazy"
           data-index="3"
         />
         <img
           src="../img/Ilustración/7.webp"
-          alt="Collage diente de leon"
+          alt="Fotografia intervenida con ilustración de un hombre con dos monos dibujados, uno en cada hombro."
           class="img-el"
           loading="lazy"
           data-index="6"
         />
         <img
           src="../img/Ilustración/10.webp"
-          alt="Collage diente de leon"
+          alt="Collage analogo con recorte de revistas que ilustra un conejo con una zanahoria, con un fondo rosado de una ventana de una casa"
           class="img-el"
           loading="lazy"
           data-index="9"
         />
         <img
           src="../img/Ilustración/12.webp"
-          alt="Collage diente de leon"
+          alt="Portada de el cuento de 'Leo' el león,"
           class="img-el"
           loading="lazy"
           data-index="12"
